@@ -7,6 +7,6 @@ AUX symon-syweb-total_firewall.layout.patch 1673 RMD160 63e130338b7d48dc2debc4c2
 AUX symux-init.d 378 RMD160 438f3ee87579117db71fa346cd333cc4740b8a35 SHA1 bc5edf413f24aed698147767447f0266c4374415 SHA256 f887ab858987fc6f0984cba93dddbb1c82fb1ed515340002e373c0aa4541e584
 DIST symon-2.79.tar.gz 102400 RMD160 693b798cd6c564f4e8b79c62c1776f5b036aaf1a SHA1 a21566f3291baaa39806bec32550d5a28a163213 SHA256 7157b087b99a59f3aba9a02c375fb1b411dc4329463f748d2323c3cdf3d0cd83
 DIST syweb-0.58.tar.gz 40960 RMD160 5dffc149a078789703c1ee10699e8aab350313d7 SHA1 bf0aa3a96533f8d6ae38f5317ae001282510ced4 SHA256 c01dfbc9f069d73d7c92880a0ed05bd7bca3e970ab282c2deb706861af7d6dcf
-EBUILD symon-2.79.ebuild 3753 RMD160 eaed68e424e2dc250601a47e83659ed5bc71472e SHA1 dc1395fdc590f32b9da0df1976112bb599a9f229 SHA256 d8056cb299d16ef5db733fb9f99d390588084843e09e26a6ceb715d085f3a088
-MISC ChangeLog 5620 RMD160 8829503c02f6efa42c0e011a3aa0315448ac5f90 SHA1 9c036bd2282cc0449ad4110801155c677bd43b96 SHA256 6202a85a42dc5b260038aaaa0ab1a9806ffc222e55d542f3d608bcffe97bf4a5
+EBUILD symon-2.79.ebuild 3984 RMD160 05c5fe20a6ae01abfda72c22e2e944d2137e387e SHA1 033b8c33577cd82cc9bd4604df9956f46e49733a SHA256 4bd51b77578725520f0d0134efec090a389a73369782146e1d21834c19d3d791
+MISC ChangeLog 5818 RMD160 9a83ac7491b9264acbfdc5d924d0d10b60890c24 SHA1 9891d2845bd0162f38270e01dfe62503be64ea0a SHA256 c8977270a7bc4854cb291605e2587f76709f7e8f738d3258c03fa18d66cd673e
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
