@@ -3,6 +3,10 @@
 # $Header: $
 
   31 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
+  Tell the user how to test the configuration files, and how the RRDs
+  directory structure for syweb should be organized
+
+  31 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
   Make doins, dodoc, doman, dosbin, and dobin die on failure
 
   31 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
